# apriltag-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile
.claude/skills/profile/: SKILL.md  analyze.py
.github/badges/: coverage.json  regression.json  tests.json  unsafe.json
.github/workflows/: ci.yml  release.yml  stats.yml
apriltag/: Cargo.toml
apriltag-bench/: Cargo.toml  build.rs
apriltag-bench-wasm/: Cargo.toml
apriltag-bench-wasm/src/: lib.rs
apriltag-bench/src/: catalog.rs  distortion.rs  lib.rs  main.rs  metrics.rs  reference.rs  reference_bridge.c  report.rs  scene.rs  transform.rs
apriltag-bench/tests/: end_to_end.rs  reference_compare.rs
apriltag-bench/ui/: app.js  index.html  style.css
apriltag-detect-cli/: Cargo.toml
apriltag-detect-cli/src/: main.rs
apriltag-gen/: Cargo.toml
apriltag-gen-cli/: Cargo.toml  README.md
apriltag-gen-cli/src/: main.rs  render_pdf.rs  render_png.rs
apriltag-gen/families/: tag16h5.toml  tag25h9.toml  tag36h11.toml  tagCircle21h7.toml  tagCircle49h12.toml  tagCustom48h12.toml  tagStandard41h12.toml  tagStandard52h13.toml
apriltag-gen/src/: codegen.rs  family.rs  lib.rs  types.rs  upgrade.rs
apriltag-gen/src/layout/: classic.rs  mod.rs  standard.rs  validate.rs
apriltag-wasm/: Cargo.toml
apriltag-wasm/src/: lib.rs
apriltag/benches/: detection.rs
apriltag/examples/: alloc_comparison.rs
apriltag/families/: tag16h5.toml  tag36h11.toml  tagCircle21h7.toml  tagStandard41h12.toml  tagStandard52h13.toml
apriltag/src/: bits.rs  error.rs  family.rs  hamming.rs  lib.rs  render.rs  tag.rs  types.rs
apriltag/src/detect/: cluster.rs  connected.rs  decode.rs  dedup.rs  detector.rs  homography.rs  image.rs  linear_solve.rs  mat3.rs  mod.rs  par.rs  pose.rs  preprocess.rs  quad.rs  refine.rs  threshold.rs  unionfind.rs
apriltag/src/detect/geometry/: linear_solve.rs  mat3.rs  mod.rs  vec2.rs  vec3.rs
apriltag/src/detect/pose/: mod.rs  svd.rs
apriltag/src/detect/quad/: corners.rs  geometry.rs  line_fitting.rs  mod.rs
apriltag/src/layout/: circle.rs  classic.rs  mod.rs  standard.rs
docs/: benchmark-results.md  commands.md  detection-plan.md  detection-spec.md  generation-spec.md  release-process.md
docs/changes/: 001-crate-skeleton.md  002-core-types.md  003-mat33-basics.md  004-eigenvalue-2x2.md  005-gauss-eliminate.md  006-svd-3x3.md  007-image-u8.md  008-bilinear-interp.md  009-decimation.md  010-gaussian-blur.md  011-tile-minmax.md  012-tile-dilate-erode.md  013-ternary-binarize.md  014-deglitch.md  015-unionfind.md  016-connected-components.md  017-edge-extraction.md  018-cluster-map.md  019-slope-proxy.md  020-merge-sort.md  021-prefix-sum-moments.md  022-line-fitting.md  023-error-computation.md  024-gaussian-smooth-errors.md  025-local-maxima.md  026-exhaustive-search.md  027-line-intersection.md  028-quad-validation.md  029-border-orientation.md  030-size-filtering.md  031-edge-refinement.md  032-homography.md  033-quick-decode-build.md  034-quick-decode-lookup.md  035-gray-model.md  036-polarity-check.md  037-bit-sampling.md  038-decode-sharpening.md  039-code-extraction.md  040-sat-overlap.md  (+16 more)
docs/papers/: README.md
scripts/: check-coverage-comments.sh  extract_codes.py  fetch-references.sh  generate-stats.sh
