[package]
name = "apriltag-bench-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for apriltag-bench scene generation"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
apriltag-bench = { path = "../apriltag-bench" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
