[package]
name = "apriltag-detect-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for AprilTag detection in images"

[[bin]]
name = "apriltag-detect"
path = "src/main.rs"

[dependencies]
apriltag = { path = "../apriltag" }
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
