[package]
name = "apriltag-gen-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for AprilTag generation and rendering"
license.workspace = true
repository.workspace = true

[dependencies]
apriltag-gen = { path = "../apriltag-gen" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
png = "0.17"
printpdf = "0.7"
