[package]
name = "apriltag-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for AprilTag detection"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
apriltag = { path = "../apriltag" }
wasm-bindgen = "0.2"
tsify-next = { version = "0.5", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
